# discord_bot_rust

./: .env  Cargo.toml  README.md
src/: main.rs
